# Retikon

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev-console  Dockerfile.pro  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements-core.txt  requirements-dev.in  requirements-dev.txt  requirements-ml.in  requirements-ml.txt  requirements-pro.txt  requirements.in  requirements.txt  test.duckdb  test2.duckdb  test3.duckdb
Dev Docs/: BYOC-Guide.md  Core-Pro-Boundary.md  Core-Pro-Split-Checklist.md  Core-Repo-Map.md  DLQ-Runbook.md  Deployment.md  Developer-Console-UI-Guide.md  Developer-Integration-Guide.md  Edge-SDK-Spec.md  Environment-Matrix.md  Environment-Reference.md  Feature-Function-Layman-Descriptions.md  Feature-to-Sprint-Mapping.md  Firestore-Control-Plane-Schema.md  Golden-Demo.md  Load-Testing.md  Local-Development.md  Model-Usage-Audit.md  Operations-Runbook.md  Pro-Repo-Map.md  Release-Checklist.md  Release-Notes-v2.5.md  Retikon-Execution-Plan-v3.0.md  Retikon-Execution-Plan-v3.1.md  Retikon-Execution-Plan-v3.2.md  Retikon-GCP-Build-Kit-v2.5.md  Retikon-Product-Spec-v3.0.md  Retikon-Product-Spec-v3.1.md  Schema-Reference.md  Security-Checklist.md  Snapshot-Refresh-Strategy.md  demo-datasets.sample.json  v3.1-Finishers.md
core/: README.md
gcp_adapter/: audit_service.py  auth.py  chaos_service.py  compaction_service.py  data_factory_service.py  dev_console_service.py  dlq_pubsub.py  duckdb_auth.py  (+20 more)
sdk/python/: README.md  pyproject.toml
sdk/python/retikon_sdk/: __init__.py  client.py
(+558 files in other folders)
