[project]
name = "retikon-core-sdk"
version = "0.1.0"
description = "Retikon Core SDK (local ingestion + query)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Retikon" }]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
